--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@hookform/resolvers": "^5.2.1",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
     "chart.js": "^4.5.0",
@@ -20,8 +21,10 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
-    "react-router": "^7.8.2"
+    "react-router": "^7.8.2",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.34.0",
