--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,11 @@
     "@emotion/styled": "^11.14.1",
     "@fontsource/ibm-plex-sans": "^5.2.6",
     "@hookform/resolvers": "^5.2.1",
-    "@mui/icons-material": "^7.3.1",
-    "@mui/material": "^7.3.1",
+    "@mui/icons-material": "^7.3.2",
+    "@mui/material": "^7.3.2",
     "chart.js": "^4.5.0",
     "dayjs": "^1.11.18",
+    "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
@@ -42,6 +43,6 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^16.3.0",
     "prettier": "^3.6.2",
-    "vite": "^7.1.3"
+    "vite": "^7.1.4"
   }
 }
